# max_cliques

./: .gitignore  CMakeLists.txt  build.sh  plot.py  readme.md  run.sh
src/: main.cpp
